--- a/gulp-layout-digital-marketing/css/style.css
+++ b/gulp-layout-digital-marketing/css/style.css
@@ -7,6 +7,14 @@
 }
 
 @font-face {
+  font-family: "PTRootUI";
+  font-display: swap;
+  src: url("../fonts/PTRootUI-Bold.woff2") format("woff2"), url("../fonts/PTRootUI-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
   font-family: "Involve";
   font-display: swap;
   src: url("../fonts/Involve-Medium.woff2") format("woff2"), url("../fonts/Involve-Medium.woff") format("woff");
@@ -27,14 +35,6 @@
   font-display: swap;
   src: url("../fonts/PTRootUI-Regular.woff2") format("woff2"), url("../fonts/PTRootUI-Regular.woff") format("woff");
   font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "PTRootUI";
-  font-display: swap;
-  src: url("../fonts/PTRootUI-Bold.woff2") format("woff2"), url("../fonts/PTRootUI-Bold.woff") format("woff");
-  font-weight: 700;
   font-style: normal;
 }
 
@@ -826,6 +826,7 @@ body:has(.header.open-menu)::before {
 }
 
 .promo {
+  position: relative;
   padding: 2.25rem 0 3.44rem;
 }
 
@@ -841,10 +842,6 @@ body:has(.header.open-menu)::before {
 
 .promo__body {
   display: contents;
-}
-
-.promo__offer {
-  max-width: 31.25rem;
 }
 
 .promo__subtitle {
@@ -867,22 +864,28 @@ body:has(.header.open-menu)::before {
           flex-direction: column;
 }
 
-.promo__video {
-  max-width: 100%;
-  border-radius: 0.625rem;
-  -webkit-box-ordinal-group: 2;
-      -ms-flex-order: 1;
-          order: 1;
-  margin-top: 1.25rem;
+.promo__video-wrapper {
+  position: relative;
+  width: 100%;
+  height: 20.5rem;
+  display: block;
+  z-index: 1;
 }
 
-.promo__video video {
-  max-width: 100%;
+.promo__video-wrapper .video-area {
   height: 100%;
+}
+
+.promo__video-wrapper .video-area video {
+  border-radius: 1.25rem;
   width: 100%;
+  min-height: 20.5rem;
+  max-height: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  border-radius: 0.625rem;
+  display: block;
+  cursor: pointer;
 }
 
 .promo__list {
@@ -1718,10 +1721,6 @@ body:has(.header.open-menu)::before {
     row-gap: 3.25rem;
   }
 
-  .promo__video {
-    margin-top: 0;
-  }
-
   .promo__list {
     padding-top: 1.81rem;
     margin-top: 1.81rem;
@@ -2106,7 +2105,7 @@ body:has(.header.open-menu)::before {
   .promo {
     padding: 5rem 0 7rem;
     min-height: 100vh;
-    margin-bottom: 50vh;
+    margin-bottom: calc(80vh - 12.5rem);
   }
 
   .promo__body {
@@ -2118,6 +2117,17 @@ body:has(.header.open-menu)::before {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    margin-left: -0.75rem;
+    margin-right: -0.75rem;
+  }
+
+  .promo__offer {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 50%;
+            flex: 0 0 50%;
+    width: 50%;
+    padding-right: 0.75rem;
+    padding-left: 0.75rem;
   }
 
   .promo__subtitle {
@@ -2130,11 +2140,21 @@ body:has(.header.open-menu)::before {
   }
 
   .promo__video {
-    position: absolute;
-    z-index: 2;
-    right: 0;
-    aspect-ratio: 1.3513513514;
-    width: 31.25rem;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 50%;
+            flex: 0 0 50%;
+    width: 50%;
+    padding-right: 0.75rem;
+    padding-left: 0.75rem;
+  }
+
+  .promo__video-wrapper {
+    z-index: 9;
+    margin-left: auto;
+    -webkit-transition: width 0.3s ease-out, position 0.3s ease;
+    transition: width 0.3s ease-out, position 0.3s ease;
+    direction: rtl;
+    max-width: 31.25rem;
   }
 
   .promo__list {
@@ -2369,6 +2389,13 @@ body:has(.header.open-menu)::before {
     max-width: 9.75rem;
   }
 
+  .promo__video-wrapper .video-area {
+    -webkit-transform: none !important;
+        -ms-transform: none !important;
+            transform: none !important;
+    width: 100% !important;
+  }
+
   .lids__title {
     font-size: 1.375rem;
   }
@@ -2421,6 +2448,18 @@ body:has(.header.open-menu)::before {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 8.375rem;
             flex: 0 0 8.375rem;
+  }
+}
+
+@media (min-width: 991.98px) and (max-width: 1199.98px) {
+  .promo__video-wrapper .video-area video {
+    min-height: 15.625rem;
+  }
+}
+
+@media (min-width: 1199.98px) and (max-width: 1439.98px) {
+  .promo__video-wrapper .video-area video {
+    min-height: 17.5rem;
   }
 }
 
