--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -143,11 +143,13 @@ body {
 // ========================================================
 
 .promo {
+	position: relative;
 	padding: 2.25rem 0 3.44rem;
+
 	@media (min-width: $md3) {
 		padding: 5rem 0 7rem;
 		min-height: 100vh;
-		margin-bottom: 50vh;
+		margin-bottom: calc(80vh - rem(200));
 	}
 	// .promo__container
 	&__container {
@@ -166,11 +168,18 @@ body {
 			position: relative;
 			justify-content: space-between;
 			flex-direction: row;
+			margin-left: rem(-12);
+			margin-right: rem(-12);
 		}
 	}
 	// .promo__offer
 	&__offer {
-		max-width: 31.25rem;
+		@media (min-width: $md3) {
+			flex: 0 0 50%;
+			width: 50%;
+			padding-right: rem(12);
+			padding-left: rem(12);
+		}
 	}
 	// .promo__title
 	&__title {
@@ -203,31 +212,88 @@ body {
 	// .promo__btn
 	&__btn {
 	}
-	// .promo__video
 	&__video {
-		max-width: 100%;
-		border-radius: 0.625rem;
-
-		order: 1;
-		margin-top: 1.25rem;
-		@media (min-width: $md5) {
-			margin-top: 0;
-		}
 		@media (min-width: $md3) {
-			position: absolute;
-			z-index: 2;
-			right: 0;
-			aspect-ratio: math.div(31.25, 23.125);
-			width: 31.25rem;
-		}
-		& video {
-			max-width: 100%;
-			height: 100%;
-			width: 100%;
-			object-fit: cover;
-			border-radius: 0.625rem;
+			flex: 0 0 50%;
+			width: 50%;
+			padding-right: rem(12);
+			padding-left: rem(12);
 		}
 	}
+	// .promo__video-wrapper
+	&__video-wrapper {
+		position: relative;
+		width: 100%;
+		height: rem(328);
+		display: block;
+		z-index: 1;
+		@media (min-width: $md3) {
+			z-index: 9;
+			margin-left: auto;
+			transition: width 0.3s ease-out, position 0.3s ease;
+			direction: rtl;
+			max-width: 31.25rem;
+		}
+		.video-area {
+			height: 100%;
+			@media (max-width: $md3) {
+				transform: none !important;
+				width: 100% !important;
+			}
+			& video {
+				border-radius: rem(20);
+				width: 100%;
+				min-height: rem(328);
+				max-height: 100%;
+				height: 100%;
+				object-fit: cover;
+				display: block;
+				cursor: pointer;
+				@media (min-width: $md3) {
+					@media (max-width: $md2) {
+						min-height: rem(250);
+					}
+				}
+				@media (min-width: $md2) {
+					@media (max-width: $md1) {
+						min-height: rem(280);
+					}
+				}
+			}
+		}
+		// & video {
+		// 	max-width: 100%;
+		// 	height: 100%;
+		// 	width: 100%;
+		// 	object-fit: cover;
+		// 	border-radius: 0.625rem;
+		// }
+	}
+	// .promo__video-wrapper
+	// &__video-wrapper {
+	// 	max-width: 100%;
+	// 	border-radius: 0.625rem;
+
+	// 	order: 1;
+	// 	margin-top: 1.25rem;
+	// 	@media (min-width: $md5) {
+	// 		margin-top: 0;
+	// 	}
+	// 	@media (min-width: $md3) {
+	// 		position: absolute;
+	// 		z-index: 2;
+	// 		right: 0;
+	// 		aspect-ratio: math.div(31.25, 23.125);
+	// 		width: 31.25rem;
+	// 	}
+	// 	& video {
+	// 		max-width: 100%;
+	// 		height: 100%;
+	// 		width: 100%;
+	// 		object-fit: cover;
+	// 		border-radius: 0.625rem;
+	// 	}
+	// }
 	// .promo__list
 	&__list {
 		border-top: rem(1) solid rgba(255, 255, 255, 0.2);
