--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,18 +1,55 @@
 .header {
+	// position: sticky;
+	// top: 0;
+	// z-index: 20;
 	padding: 1.25rem 0;
 	@media (min-width: $md3) {
 		padding: 0.75rem 0;
+	}
+	&::before {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100vh;
+		background: rgba(15, 20, 30, 0.4);
+		backdrop-filter: blur(12.5px);
+		-webkit-backdrop-filter: blur(12.5px);
+		z-index: 2;
+		opacity: 0;
+		visibility: hidden;
+		transition: opacity 0.3s ease, visibility 0.3s ease;
+	}
+	&.open-menu {
+		&::before {
+			opacity: 1;
+			visibility: visible;
+		}
 	}
 	// .header__container
 	&__container {
 		display: flex;
 		align-items: flex-end;
+		// @media (max-width: $md3) {
+		// 	max-width: 100%;
+		// }
 		@media (min-width: $md4) {
 			align-items: center;
 		}
 	}
 	// .header__logo
 	&__logo {
+		// position: relative;
+		// z-index: 1;
+		// &::before {
+		// 	content: "";
+		// 	position: absolute;
+		// 	inset: rem(-10);
+		// 	background: #0f141e;
+		// 	border-radius: 0.625rem;
+		// 	z-index: -1;
+		// }
 		margin-right: auto;
 		max-width: rem(108);
 		@media (min-width: $md4) {
@@ -42,6 +79,7 @@
 		color: #732ac7;
 		width: rem(40);
 		height: rem(40);
+		// box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1);
 		@media (min-width: $md5) {
 			font-size: 1.25rem;
 			width: rem(44);
@@ -69,6 +107,8 @@
 		padding: 2rem 2rem;
 		overflow-y: auto;
 		overflow-x: hidden;
+		display: flex;
+		flex-direction: column;
 		transform: translateX(100%);
 		transition: transform 0.3s ease;
 		.header.open-menu & {
@@ -79,8 +119,13 @@
 	&__list {
 		display: flex;
 		flex-direction: column;
-		gap: 2rem;
+		gap: rem(17);
+		// box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1);
+		margin-top: rem(40);
+		margin-bottom: rem(40);
 		@media (min-width: $md3) {
+			margin-top: 0;
+			margin-bottom: 0;
 			flex-direction: row;
 			gap: 0;
 		}
@@ -114,7 +159,7 @@
 		align-items: center;
 		font-weight: 500;
 		line-height: 110%;
-		font-size: 1.5rem;
+		font-size: rem(18);
 		@media (min-width: $md3) {
 			font-size: 0.875rem;
 			padding: 1rem 1.25rem;
@@ -128,6 +173,37 @@
 				background: #9335ff;
 				color: #fff;
 			}
+		}
+	}
+	// .menu__logo
+	&__logo {
+		max-width: rem(108);
+		@media (min-width: $md3) {
+			display: none;
+		}
+	}
+
+	// .menu__btns
+	&__btns {
+		margin-top: auto;
+		display: flex;
+		flex-direction: column;
+		gap: rem(10);
+		@media (min-width: $md3) {
+			display: none;
+		}
+	}
+	// .menu__btn
+	&__btn {
+	}
+	// .menu__copy
+	&__copy {
+		margin-top: rem(40);
+		font-size: rem(14);
+		line-height: 150%;
+		opacity: 0.5;
+		@media (min-width: $md3) {
+			display: none;
 		}
 	}
 }
