--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -165,7 +165,7 @@ body {
 			align-items: flex-start;
 			margin-left: rem(-12);
 			margin-right: rem(-12);
-			margin-bottom: auto;
+			// margin-bottom: auto;
 		}
 	}
 	// .promo__offer
