--- a/src/scss/icons.scss
+++ b/src/scss/icons.scss
@@ -24,6 +24,18 @@
 .icon-check:before {
 	content: "\e906";
 }
+.icon-book:before {
+	content: "\e908";
+}
+.icon-comment:before {
+	content: "\e909";
+}
+.icon-like:before {
+	content: "\e90a";
+}
+.icon-share:before {
+	content: "\e90b";
+}
 .icon-cross:before {
 	content: "\e900";
 }
