--- a/src/fonts/style.css
+++ b/src/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icons';
-  src:  url('fonts/icons.eot?uceys1');
-  src:  url('fonts/icons.eot?uceys1#iefix') format('embedded-opentype'),
-    url('fonts/icons.ttf?uceys1') format('truetype'),
-    url('fonts/icons.woff?uceys1') format('woff'),
-    url('fonts/icons.svg?uceys1#icons') format('svg');
+  src:  url('fonts/icons.eot?kbjie5');
+  src:  url('fonts/icons.eot?kbjie5#iefix') format('embedded-opentype'),
+    url('fonts/icons.ttf?kbjie5') format('truetype'),
+    url('fonts/icons.woff?kbjie5') format('woff'),
+    url('fonts/icons.svg?kbjie5#icons') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -30,6 +30,18 @@
 }
 .icon-check:before {
   content: "\e906";
+}
+.icon-book:before {
+  content: "\e908";
+}
+.icon-comment:before {
+  content: "\e909";
+}
+.icon-like:before {
+  content: "\e90a";
+}
+.icon-share:before {
+  content: "\e90b";
 }
 .icon-cross:before {
   content: "\e900";
