--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -1,5 +1,6 @@
 //============ МОДУЛИ ====================
 @import "modules/popup";
+@import "modules/pagination";
 @import "modules/breadcrumbs";
 
 //============ МОДУЛИ ====================
@@ -51,6 +52,12 @@
 	font-size: rem(15);
 	@media (min-width: $md5) {
 		font-size: 1.375rem;
+	}
+}
+
+.pc-only {
+	@media (max-width: $md5) {
+		display: none;
 	}
 }
 
