--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -2,6 +2,7 @@
 @import "modules/popup";
 @import "modules/pagination";
 @import "modules/breadcrumbs";
+@import "modules/phone-input";
 
 //============ МОДУЛИ ====================
 .title-xl {
