--- a/src/scss/modules/phone-input.scss
+++ b/src/scss/modules/phone-input.scss
@@ -8,7 +8,8 @@
 	border-radius: 0.5rem;
 	padding: 1rem;
 	caret-color: $accent;
-	color: $text;
+	border: rem(1) solid transparent;
+	color: $dark;
 	&.input-code {
 		text-align: center;
 		padding: 0.6rem;
@@ -25,7 +26,7 @@
 }
 
 .iti {
-	color: $text;
+	color: $dark;
 }
 .iti--separate-dial-code .iti__selected-flag {
 	background: transparent;
