--- a/src/fonts/style.css
+++ b/src/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icons';
-  src:  url('fonts/icons.eot?kbjie5');
-  src:  url('fonts/icons.eot?kbjie5#iefix') format('embedded-opentype'),
-    url('fonts/icons.ttf?kbjie5') format('truetype'),
-    url('fonts/icons.woff?kbjie5') format('woff'),
-    url('fonts/icons.svg?kbjie5#icons') format('svg');
+  src:  url('fonts/icons.eot?w13lki');
+  src:  url('fonts/icons.eot?w13lki#iefix') format('embedded-opentype'),
+    url('fonts/icons.ttf?w13lki') format('truetype'),
+    url('fonts/icons.woff?w13lki') format('woff'),
+    url('fonts/icons.svg?w13lki#icons') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-minus:before {
+  content: "\e90c";
+}
+.icon-plus:before {
+  content: "\e90d";
+}
 .icon-telegram-alternate:before {
   content: "\e907";
 }
