--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -142,3 +142,118 @@ body {
 @import "./pages/blog";
 @import "./pages/error";
 @import "./pages/login";
+
+.list6b {
+	padding: 0;
+	list-style: none;
+}
+.list6b li {
+	padding: 6px;
+}
+.list6b li:before {
+	padding-right: 10px;
+	font-weight: bold;
+	color: #c0c0c0;
+	content: "\2714";
+	transition-duration: 0.5s;
+}
+.list6b li:hover:before {
+	color: #732ac7;
+	content: "\2714";
+}
+
+table {
+	background: white;
+	max-width: 100%;
+	width: 100%;
+	border-collapse: collapse;
+	text-align: left;
+	font-size: 0.875rem;
+}
+th {
+	font-weight: normal;
+	color: #039;
+	border-bottom: 2px solid #732ac7;
+	padding: 10px 8px;
+	font-size: 0.875rem;
+}
+td {
+	color: #0f141e;
+	padding: 9px 8px;
+	transition: 0.3s linear;
+}
+tr:hover td {
+	color: #732ac7;
+}
+
+table.delivery {
+	width: 100%;
+	border: 0px;
+	border-collapse: collapse;
+}
+table.delivery thead {
+	font-weight: bold;
+}
+table.delivery td {
+	padding: 0.6rem 1rem;
+	border-bottom: 1px solid #732ac7;
+}
+
+@media screen and (max-width: 800px) {
+	table.delivery thead {
+		display: none;
+	}
+	table.delivery tr {
+		display: block;
+		margin-bottom: 1rem;
+		border-bottom: 2px solid #732ac7;
+	}
+	table.delivery td {
+		display: block;
+		text-align: right;
+		color: #0f141e;
+	}
+	table.delivery td:before {
+		content: attr(aria-label);
+		float: left;
+		font-weight: bold;
+	}
+}
+
+.blockquote-4 {
+	position: relative;
+	margin: 16px 16px 46px 16px;
+	border: 2px solid #732ac7;
+	border-radius: 20px;
+	padding: 25px;
+}
+.blockquote-4::after {
+	content: "";
+	position: absolute;
+	border: 2px solid #732ac7;
+	border-radius: 0 50px 0 0;
+	width: 40px;
+	height: 40px;
+	bottom: -40px;
+	left: 50px;
+	border-bottom: none;
+	border-left: none;
+	z-index: 2;
+	box-sizing: border-box;
+}
+.blockquote-4::before {
+	content: "";
+	position: absolute;
+	width: 80px;
+	border: 6px solid #fff;
+	bottom: -3px;
+	left: 50px;
+	z-index: 1;
+}
+.blockquote-4 cite {
+	position: absolute;
+	bottom: -30px;
+	left: 110px;
+	font-weight: bold;
+	color: #0f141e;
+}
