--- a/src/scss/icons.scss
+++ b/src/scss/icons.scss
@@ -18,6 +18,27 @@
 	}
 }
 
+.icon-smile:before {
+	content: "\e914";
+}
+.icon-eye-stroke:before {
+	content: "\e913";
+}
+.icon-fire:before {
+	content: "\e910";
+}
+.icon-cross-circle:before {
+	content: "\e911";
+}
+.icon-search:before {
+	content: "\e912";
+}
+.icon-chevron:before {
+	content: "\e90e";
+}
+.icon-filter:before {
+	content: "\e90f";
+}
 .icon-minus:before {
 	content: "\e90c";
 }
