--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -3,6 +3,7 @@
 @import "modules/pagination";
 @import "modules/breadcrumbs";
 @import "modules/phone-input";
+@import "modules/select";
 
 //============ МОДУЛИ ====================
 .title-xl {
