--- a/src/fonts/style.css
+++ b/src/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icons';
-  src:  url('fonts/icons.eot?w13lki');
-  src:  url('fonts/icons.eot?w13lki#iefix') format('embedded-opentype'),
-    url('fonts/icons.ttf?w13lki') format('truetype'),
-    url('fonts/icons.woff?w13lki') format('woff'),
-    url('fonts/icons.svg?w13lki#icons') format('svg');
+  src:  url('fonts/icons.eot?w4k77t');
+  src:  url('fonts/icons.eot?w4k77t#iefix') format('embedded-opentype'),
+    url('fonts/icons.ttf?w4k77t') format('truetype'),
+    url('fonts/icons.woff?w4k77t') format('woff'),
+    url('fonts/icons.svg?w4k77t#icons') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,27 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-smile:before {
+  content: "\e914";
+}
+.icon-eye-stroke:before {
+  content: "\e913";
+}
+.icon-fire:before {
+  content: "\e910";
+}
+.icon-cross-circle:before {
+  content: "\e911";
+}
+.icon-search:before {
+  content: "\e912";
+}
+.icon-chevron:before {
+  content: "\e90e";
+}
+.icon-filter:before {
+  content: "\e90f";
+}
 .icon-minus:before {
   content: "\e90c";
 }
