--- a/src/scss/modules/select.scss
+++ b/src/scss/modules/select.scss
@@ -5,6 +5,11 @@
 			opacity: 1;
 			visibility: visible;
 		}
+		.dropdown__button {
+			&::before {
+				transform: rotate(-180deg);
+			}
+		}
 	}
 	font-size: rem(13);
 	font-weight: 500;
@@ -19,26 +24,37 @@
 		position: relative;
 		cursor: pointer;
 		transition: all 0.3s ease 0s;
-		color: #1f2b32;
 		width: 100%;
-		padding: rem(10);
-		border-radius: rem(10);
-		background: #f3f6fa;
-		gap: rem(7);
+		border-radius: 0.625rem;
+		background: #f9f5ff;
+		gap: rem(5);
+		color: #9335ff;
+		font-family: $font-involve;
+		font-weight: 500;
+		line-height: 125%;
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
 		z-index: 1;
+		font-size: 0.75rem;
+		padding: 0.78rem 0.75rem;
+		color: rgba(15, 20, 30, 0.5);
+		@media (min-width: $md5) {
+			padding: 0.94rem;
+			font-size: 0.875rem;
+		}
 		&.selected {
-			color: #232c32;
+			color: rgba(15, 20, 30, 1);
+			.dropdown__button-caption {
+				color: $accent;
+			}
 		}
 		&::before {
 			transition: transform 0.3s ease 0s;
 			order: 1;
-			width: 1rem;
-			height: 1rem;
-			font-size: 0.65rem;
-			color: #aab4bd;
+			width: 1.125rem;
+			height: 1.125rem;
+			font-size: 0.35rem;
 			display: flex;
 			justify-content: center;
 			align-items: center;
@@ -60,7 +76,7 @@
 		}
 		@media (any-hover: hover) {
 			&:hover {
-				background: #e7ecf3;
+				background: darken($color: #f9f5ff, $amount: 5);
 			}
 		}
 	}
@@ -72,15 +88,18 @@
 	}
 	// .dropdown__button-caption
 	&__button-caption {
-		color: #727f8c;
-		font-size: rem(12);
+		color: #d0a8ff;
+		font-family: $font-involve;
+		font-size: 0.75rem;
 		font-weight: 600;
 		line-height: 145%;
+		margin-bottom: 0.25rem;
 	}
 	// .dropdown__button-text
 	&__button-text {
 		text-align: left;
 	}
+	// .dropdown__button-icon
 	&__button-icon {
 		width: 1rem;
 		height: 1rem;
@@ -90,24 +109,36 @@
 		align-items: center;
 		flex-shrink: 0;
 	}
+	// .dropdown__body
 	&__body {
 		position: absolute;
-		left: 0;
 		top: calc(100% + 0.25rem);
 		width: 100%;
 		z-index: 4;
 		padding: em(10);
 		min-width: fit-content;
-		border-radius: rem(10);
+		border-radius: 0.625rem;
 		transition: 0.2s ease;
-		background: #f3f6fa;
+		border: rem(1) solid #f6f7f7;
+		background: #fff;
+		box-shadow: 0 rem(10) rem(20) 0 rgba(120, 120, 120, 0.15);
 		opacity: 0;
 		visibility: hidden;
+		color: #0f141e;
+		font-family: $font-involve;
+		font-weight: 500;
+		line-height: 140%;
+		font-size: 0.75rem;
+		left: 0;
+		@media (min-width: $md5) {
+			font-size: 0.875rem;
+		}
 		&.visible {
 			opacity: 1;
 			visibility: visible;
 		}
 	}
+	// .dropdown__list
 	&__list {
 		max-height: rem(280);
 		overflow-x: hidden;
@@ -123,11 +154,11 @@
 			border-radius: rem(5);
 		}
 		&::-webkit-scrollbar-thumb {
-			background: #81a6ca;
+			background: #9335ff;
 			border-radius: rem(5);
 			@media (any-hover: hover) {
 				&:hover {
-					background: #2d87ff;
+					background: darken($accent, 10%);
 				}
 			}
 		}
@@ -135,12 +166,12 @@
 	&__list-item {
 		cursor: pointer !important;
 		padding: rem(10);
-		border-radius: rem(5);
+		border-radius: 0.3125rem;
 		white-space: nowrap;
 		&:not(.active) {
 			@media (any-hover: hover) {
 				&:hover {
-					background: #c5d1e0;
+					background: #f3e9ff;
 				}
 			}
 		}
@@ -150,7 +181,7 @@
 		}
 		&.active,
 		&[aria-checked="true"] {
-			background: #c5d1e0;
+			background: #e7ddf2;
 		}
 
 		&[aria-disabled="true"] {
