--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -69,6 +69,9 @@ body {
 			overflow: visible;
 		}
 	}
+	&.filter-lock {
+		overflow: hidden;
+	}
 }
 // ==================ОБОЛОЧКА==============================
 .wrapper {
@@ -142,6 +145,7 @@ body {
 @import "./pages/blog";
 @import "./pages/error";
 @import "./pages/login";
+@import "./pages/marketplace";
 
 .list6b {
 	padding: 0;
