--- a/src/scss/modules/breadcrumbs.scss
+++ b/src/scss/modules/breadcrumbs.scss
@@ -7,8 +7,6 @@
 	}
 	// .breadcrumbs__list-item
 	&__list-item {
-		color: #0f141e;
-
 		font-weight: 500;
 		line-height: 150%;
 		font-size: rem(14);
@@ -31,7 +29,7 @@
 			}
 		}
 		&.active {
-			color: rgba(15, 20, 30, 0.4);
+			opacity: 0.4;
 		}
 	}
 }
