--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -1,14 +1,17 @@
 .promo {
 	position: relative;
-	padding: 2.25rem 0 3.44rem;
-
-	@media (min-width: $md3) {
-		padding: 5rem 0 7rem;
-		min-height: 100vh;
-		margin-bottom: calc(80vh - rem(200));
-	}
+	padding: 2.25rem 0 4rem;
 	display: flex;
 	flex-direction: column;
+	&:has(.promo__video) {
+		@media (min-width: $md3) {
+			min-height: 100vh;
+			margin-bottom: calc(80vh - rem(200));
+		}
+	}
+	@media (min-width: $md3) {
+		padding: 3.25rem 0 4.5rem;
+	}
 	// .promo__container
 	&__container {
 		flex: 1 1 auto;
@@ -49,15 +52,33 @@
 	}
 	// .promo__title
 	&__title {
+		&.title-lg {
+			@media (max-width: $md5) {
+				font-size: 1.75rem;
+			}
+		}
+		&:not(:first-child) {
+			max-width: 36.5rem;
+			margin-top: rem(30);
+			@media (min-width: $md2) {
+				margin-top: 2.5rem;
+				max-width: rem(525);
+			}
+		}
+		& span {
+			background: linear-gradient(transparent em(10, 40), #9335ff em(10, 40), #9335ff calc(100% - em(7, 40)), transparent calc(100% - em(7, 40)));
+		}
 	}
 	// .promo__subtitle
 	&__subtitle {
 		line-height: 150%;
-		margin-top: 1.88rem;
-		font-size: 1rem;
+		margin-top: 1.06rem;
+		font-size: 0.9375rem;
+		max-width: rem(680);
 		@media (min-width: $md3) {
 			font-size: 1.125rem;
-			margin-top: 2.5rem;
+			max-width: rem(424);
+			margin-top: rem(45);
 		}
 	}
 	// .promo__btns
@@ -71,7 +92,7 @@
 			flex-direction: row;
 		}
 		@media (min-width: $md3) {
-			margin-top: 2.5rem;
+			margin-top: 3.5rem;
 		}
 	}
 	// .promo__btn
@@ -189,6 +210,46 @@
 			}
 		}
 	}
+	&__image {
+		@media (max-width: $md5) {
+			margin-top: 1.25rem;
+		}
+		position: relative;
+		& img {
+			border-radius: rem(10);
+		}
+		@media (min-width: $md3) {
+			&::before {
+				content: "";
+				position: absolute;
+				bottom: 0;
+				left: -8rem;
+				z-index: -1;
+				width: 14.1875rem;
+				height: 15.1875rem;
+				background: url("@img/decor/pixel-decor-6.svg") 0 0 / cover no-repeat;
+			}
+		}
+	}
+	&__image-label {
+		position: absolute;
+		color: #fff;
+		font-family: $font-involve;
+		font-weight: 500;
+		line-height: 125%;
+		padding: 0.375rem 0.625rem;
+		border-radius: 0.625rem;
+		background: #c491ff;
+		right: rem(-15);
+		transform: rotate(5deg);
+		font-size: 0.75rem;
+		@media (min-width: $md4) {
+			font-size: 1rem;
+			transform: rotate(-5deg);
+			left: rem(-15);
+			right: auto;
+		}
+	}
 }
 
 .promotion {
@@ -264,7 +325,7 @@
 			position: relative;
 			margin: em(0) em(0) em(0) auto;
 		}
-		@media (min-width: 510px) {
+		@media (min-width: 5rem(7)) {
 			margin: 0 auto;
 		}
 		@media (min-width: $md4) {
@@ -646,6 +707,29 @@
 			height: rem(364);
 		}
 	}
+	&--white {
+		background: #fff;
+		color: #0f141e;
+		padding: rem(100) 0 rem(50);
+		@media (min-width: $md3) {
+			padding: rem(100) 0 rem(60);
+		}
+		.cases__title {
+			max-width: 100%;
+			width: 100%;
+		}
+		.cases__card {
+			background: #f4f5f5;
+			color: #0f141e;
+		}
+		.cases__tab-btn {
+			background: #f4f5f5;
+		}
+		&::before,
+		&::after {
+			display: none;
+		}
+	}
 	// .cases__container
 	&__container {
 	}
@@ -813,6 +897,20 @@
 
 .complex {
 	padding: rem(50) 0;
+	&--white {
+		background: #fff;
+		color: #0f141e;
+		.complex__slide {
+			background: #f4f5f5;
+		}
+		.complex__prev,
+		.complex__next {
+			border: rem(1) solid #0f141e;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
+	}
 	@media (min-width: $md3) {
 		padding: rem(90) 0 rem(75);
 	}
@@ -827,6 +925,26 @@
 	}
 	// .complex__title
 	&__title {
+		& span {
+			position: relative;
+			z-index: 1;
+			display: inline-block;
+			&::before {
+				content: "";
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 103%;
+				height: 95%;
+				z-index: -1;
+				background: url("@img/complex-title-decor.svg") center / 100% auto no-repeat;
+			}
+		}
+	}
+	&__subtitle {
+		margin-top: 2.81rem;
+		font-size: 1rem;
+		line-height: 155%;
 	}
 	// .complex__controls
 	&__controls {
@@ -1092,6 +1210,9 @@
 	// .team__title
 	&__title {
 		max-width: rem(610);
+		&.team__title--large {
+			max-width: rem(710);
+		}
 		& span {
 			position: relative;
 			display: inline-block;
@@ -1100,11 +1221,11 @@
 				content: "";
 				position: absolute;
 				top: 0;
-				left: -1.5%;
+				left: 0;
 				width: 103%;
-				height: 100%;
+				height: 95%;
 				z-index: -1;
-				background: url("@img/partners-title-decor.svg") center / contain no-repeat;
+				background: url("@img/partners-title-decor.svg") center / 100% auto no-repeat;
 			}
 		}
 	}
@@ -1112,11 +1233,13 @@
 	&__body {
 		margin-top: rem(50);
 		display: grid;
+		align-items: start;
 		position: relative;
 		z-index: 2;
 		row-gap: rem(50);
 		@media (min-width: $md3) {
-			grid-template-columns: 1.1fr 1fr;
+			grid-template-columns: 1.05fr 1fr;
+			column-gap: 3.34rem;
 		}
 	}
 	// .team__benefits
@@ -1124,6 +1247,11 @@
 		display: grid;
 		gap: rem(24);
 		grid-template-columns: repeat(2, 1fr);
+		&:has(.team__benefit-caption) {
+			@media (max-width: $md4) {
+				grid-template-columns: auto;
+			}
+		}
 		@media (min-width: $md4) {
 			grid-template-columns: repeat(4, 1fr);
 		}
@@ -1135,12 +1263,15 @@
 	}
 	// .team__benefit
 	&__benefit {
-		max-width: 10rem;
+		max-width: 16rem;
 	}
 	// .team__benefit-icon
 	&__benefit-icon {
 		width: 2rem;
 		height: 2rem;
+	}
+	&__benefit-caption {
+		margin-top: 1.25rem;
 	}
 	// .team__benefit-title
 	&__benefit-title {
