--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -100,7 +100,7 @@ body {
 		max-width: rem(540);
 	}
 	@media (min-width: $md4) {
-		max-width: rem(704);
+		max-width: rem(684);
 	}
 	@media (min-width: $md3) {
 		max-width: rem(960);
@@ -146,6 +146,7 @@ body {
 @import "./pages/error";
 @import "./pages/login";
 @import "./pages/marketplace";
+@import "./pages/service";
 
 .list6b {
 	padding: 0;
