--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -62,7 +62,7 @@
 			margin-top: rem(30);
 			@media (min-width: $md2) {
 				margin-top: 2.5rem;
-				max-width: rem(525);
+				max-width: 34rem;
 			}
 		}
 		& span {
@@ -79,6 +79,42 @@
 			font-size: 1.125rem;
 			max-width: rem(424);
 			margin-top: rem(45);
+		}
+	}
+	&__benefits {
+		margin-top: 3rem;
+		max-width: 25rem;
+
+		& li {
+			padding-left: em(39);
+
+			position: relative;
+			font-size: rem(14);
+			@media (min-width: $md4) {
+				font-size: 1rem;
+			}
+			line-height: 150%;
+			&::before {
+				@extend %ic, .icon-check;
+				position: absolute;
+				top: em(4);
+				left: em(4);
+				background: #9335ff;
+				color: #fff;
+				border-radius: 50%;
+				width: em(20);
+				height: em(20);
+				font-size: 1em;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+			}
+			&:not(:last-child) {
+				margin-bottom: rem(20);
+				@media (min-width: $md3) {
+					margin-bottom: 2.25rem;
+				}
+			}
 		}
 	}
 	// .promo__btns
@@ -214,20 +250,22 @@
 		@media (max-width: $md5) {
 			margin-top: 1.25rem;
 		}
-		position: relative;
 		& img {
 			border-radius: rem(10);
 		}
-		@media (min-width: $md3) {
-			&::before {
-				content: "";
-				position: absolute;
-				bottom: 0;
-				left: -8rem;
-				z-index: -1;
-				width: 14.1875rem;
-				height: 15.1875rem;
-				background: url("@img/decor/pixel-decor-6.svg") 0 0 / cover no-repeat;
+		&.has-decor {
+			position: relative;
+			@media (min-width: $md3) {
+				&::before {
+					content: "";
+					position: absolute;
+					bottom: 0;
+					left: -8rem;
+					z-index: -1;
+					width: 14.1875rem;
+					height: 15.1875rem;
+					background: url("@img/decor/pixel-decor-6.svg") 0 0 / cover no-repeat;
+				}
 			}
 		}
 	}
@@ -249,6 +287,110 @@
 			left: rem(-15);
 			right: auto;
 		}
+	}
+	// .promo__gift
+	&__gift {
+		border-radius: 0.625rem;
+		background: #9335ff;
+		position: relative;
+		padding: rem(30);
+		margin-top: 2.5rem;
+		@media (min-width: $md5) {
+			margin-top: 4.5rem;
+			padding: 2.5rem;
+		}
+		@media (min-width: $md3) {
+			margin-top: 9rem;
+		}
+	}
+	// .promo__gift-label
+	&__gift-label {
+		position: absolute;
+		top: 0;
+		color: #fff;
+		font-family: $font-involve;
+		font-weight: 500;
+		line-height: 125%;
+		background: #c491ff;
+		transform: rotate(-5deg);
+		left: rem(-15);
+
+		font-size: 0.75rem;
+		padding: 0.25rem 0.5rem;
+		border-radius: rem(8);
+		@media (min-width: $md4) {
+			border-radius: 0.625rem;
+			padding: 0.375rem 0.625rem;
+			font-size: 1rem;
+		}
+	}
+	// .promo__gift-title
+	&__gift-title {
+		@media (max-width: $md5) {
+			font-size: rem(18);
+		}
+	}
+	// .promo__gift-list
+	&__gift-list {
+		display: grid;
+		gap: 1rem;
+		margin-top: 1rem;
+		row-gap: 1.5rem;
+		@media (min-width: $md5) {
+			row-gap: 2.75rem;
+			margin-top: 1.5rem;
+			grid-template-columns: repeat(2, 1fr);
+		}
+		@media (min-width: $md3) {
+			margin-top: 1.25rem;
+			grid-template-columns: repeat(4, 1fr);
+		}
+	}
+	// .promo__gift-item
+	&__gift-item {
+		display: flex;
+		align-items: center;
+		gap: rem(21);
+		@media (min-width: $md5) {
+			gap: 0.5rem;
+			flex-direction: column;
+			align-items: flex-start;
+		}
+		@media (min-width: $md3) {
+			gap: 1rem;
+		}
+	}
+	// .promo__gift-icon
+	&__gift-icon {
+		flex-shrink: 0;
+		max-width: rem(26);
+		@media (min-width: $md5) {
+			max-width: rem(40);
+		}
+		@media (min-width: $md3) {
+			max-width: rem(50);
+		}
+	}
+	// .promo__gift-text
+	&__gift-text {
+		font-family: $font-involve;
+		font-weight: 500;
+		line-height: 125%;
+		font-size: rem(14);
+		br {
+			@media (max-width: $md5) {
+				display: none;
+			}
+		}
+		@media (min-width: $md5) {
+			font-size: 1rem;
+		}
+		@media (min-width: $md3) {
+			font-size: 1.125rem;
+		}
+	}
+	&__quiz {
+		margin-top: 1.25rem;
 	}
 }
 
