--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -147,6 +147,7 @@ body {
 @import "./pages/login";
 @import "./pages/marketplace";
 @import "./pages/service";
+@import "./pages/quiz";
 
 .list6b {
 	padding: 0;
